--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "graphene"
+name = "Graphene"
 version = "0.1.0"
-authors = ["Toure <tdunnon@gmail.com>"]
+authors = ["Toure Dunnon <tdunnon@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-rocket = "0.4.2"
-rocket_codegen = "0.4.2"
-diesel = { version = "1.4.2", features = ["postgres"] }
-dotenv = "0.14.1"
+structopt = "0.3.0"
+zip = "0.5"
+glob = "0.3.0"
+walkdir = "2.2.9"
+flate2 = "1.0.11"
+tar = "0.4.26"
+rusqlite = "0.20.0"
