--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,9 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3.0"
-zip = "0.5"
-glob = "0.3.0"
-walkdir = "2.2.9"
 flate2 = "1.0.11"
 tar = "0.4.26"
-rusqlite = "0.20.0"
-libsqlite3-sys = "0.16.0"
-time = "0.1.42"
+mongodb = "0.4.0"
+serde = "1.0.102"
+serde_derive = "1.0.102"
+serde_yaml = "0.8.11"
